Fix expanded list spacing

--- a/app/styles/base/_typography.scss
+++ b/app/styles/base/_typography.scss
@@ -224,6 +224,11 @@ hr {
     li {
       margin-bottom: _get-space('v', 'small');
       &:last-child { margin-bottom: 0; }
+
+      > ul,
+      > ol {
+        margin-top: _get-space('v', 'small');
+      }
     }
   }
 
